# jv

./: .gitignore  Cargo.toml  README.md  install  sample.json  watch9.sh
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-10-mode-restructure.md  2026-03-11-har-import-and-swift-codegen.md
docs/superpowers/specs/: 2026-03-10-mode-restructure-design.md  2026-03-11-har-import-and-swift-codegen-design.md
samples/: analytics.json  edge_cases.json  events.json  schema_tests.rs  users_1.json  users_2.json
samples/public/: products.json  sample_api.har  schema_tests.rs
scripts/: release.sh
src/: app.rs  codegen.rs  har.rs  jq_engine.rs  lib.rs  main.rs  schema.rs  session.rs  temporal.rs  theme.rs  types.rs
src/lang/: mod.rs  rust.rs  swift.rs
src/views/: browser.rs  code.rs  jq.rs  json.rs  mod.rs  schema_diagram.rs  shared_browser.rs  table.rs
src/widgets/: cache_guard.rs  hover_row.rs  jq_bar.rs  miller.rs  mod.rs  scrollable_list.rs
tests/: har_tests.rs  jq_engine_tests.rs  jq_view_tests.rs  schema_tests.rs  swift_tests.rs
