[package]
name = "jv"
version = "0.1.0"
edition = "2021"
description = "Hyper-focused JSON viewer for Rust developers"

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["syntect", "image", "svg"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jaq-interpret = "1"
jaq-parse = "1"
jaq-core = "1"
jaq-std = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rfd = "0.15"
directories = "6"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
egui-phosphor = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
private_tests = []
